2001-06-04  Ezra Peisach  <epeisach@mit.edu>

	* krlogin.c: Always provide prototype for setsignal and not if
	__STDC__ is defined.

2001-06-01  Ezra Peisach  <epeisach@mit.edu>

	* login.c: Add braces around initializers. Cleanup assignments in
	conditionals.  Include krb524.h if KRB4_CONVERT defined.

	* krlogind.c (main): Cleanup unused variables.
	(protocol): Cleanup ambiguous if-if-else warning.

	* krshd.c (main): Cleanup unused variables.

	* krlogin.c (setsignal): Declare as void.
	(server_message): Cleanup unused variables.

	* setenv.c (setenv): Declare as returning int and clean up
	assignments in conditionals.

	* kcmd.c (kcmd, rcmd_stream_init_krb5, v5_des_read): Clean up
	unused variables and assignments in conditionals.
	* forward.c (rd_and_store_for_creds): Likewise.
	* krcp.c (rsource): Likewise.
	* v4rcp.c (answer_auth): Likewise.

	* krsh.c (main): Declare as retuning int.

2001-05-25  Tom Yu  <tlyu@mit.edu>

	* krlogind.c (protocol): Don't do TIOCPKT on systems with STREAMS
	ptys, even if there is a TIOCPKT, since it may result in hangs on
	some systems where BSD packet mode is (presumably) not implemented
	properly, such as AIX 4.3.3.  Should get cleaned up at some later
	point to actually I_PUSH "pckt" or equivalent and do translation
	between STREAMS and BSD style packet mode.

2001-05-10  Tom Yu  <tlyu@mit.edu>

	* defines.h: Fix k4cmd prototype to match kcmd.c.

	* kcmd.c (k4cmd): Fix to not use a narrow type.

	* krlogin.c: Fix prototypes so they don't include narrow types.

2001-04-26  Ken Raeburn  <raeburn@mit.edu>

	* configure.in: Don't use KRB5_CHECK_PROTOS.

2001-04-02  Tom Yu  <tlyu@mit.edu>

	* login.M: Don't include "= 0" as part of the "accept_passwd"
	config option. [pullup from 1.2.2]

2001-03-12  Ezra Peisach  <epeisach@mit.edu>

	* defines.h: Add prototypes for rcmd_stream_init_normal(),
	rcmd_stream_init_krb4(), strsave() and rd_and_store_for_creds()

	* Makefile.in: Add dependency of forward.o on defines.h
